<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="12dp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/accountInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_info"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/coinDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_of_coins"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plant_health"
            android:textSize="14sp"
            android:paddingBottom="4dp"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/healthBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/custom_progress_bar"/>
    </LinearLayout>

    <TextView
        android:id="@+id/status_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning_message"
        android:textColor="#F86262"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="18sp"
        android:padding="4dp"/>

    <ImageView
        android:id="@+id/plant"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@android:drawable/ic_menu_report_image"/>

    <TextView
        android:id="@+id/levelDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/current_level"/>

    <LinearLayout
        android:id="@+id/badgesHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="16dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/badges"
            android:textSize="20dp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBadges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"/>
    </LinearLayout>

</LinearLayout>