<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:alpha="0.35"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/background_image" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@android:color/transparent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePic"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="10dp"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_white_border"
                app:shapeAppearanceOverlay="@style/CircleImageStyle" />

            <TextView
                android:id="@+id/accountInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_info"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/coinDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_coins"
                android:textColor="@color/dark_green"
                android:textSize="16sp"/>

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/redeem_header"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:padding="16dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skins"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSkin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:nestedScrollingEnabled="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vouchers"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewVoucher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
