<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:alpha="0.35"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/background_image" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:background="@android:color/transparent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profilePic"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="10dp"
                android:padding="2dp"
                android:scaleType="centerCrop"
                android:background="@drawable/circle_white_border"
                app:shapeAppearanceOverlay="@style/CircleImageStyle" />

            <TextView
                android:id="@+id/accountInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_info"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/coinDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_coins"
                android:textColor="@color/dark_green"
                android:textSize="16sp"/>

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_header"
        android:textSize="25sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/dailyStatusTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="14sp"
        android:textColor="#4CAF50"
        android:gravity="center"
        android:padding="8dp"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:padding="8dp"/>
        <!--acts as a container that will "inflate" and display-->
        <!--multiple instances of item_task.xml (one for each task)-->

    <LinearLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_verification"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp"/>
    </LinearLayout>

</LinearLayout>
